<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalculatorFragment">

    <!-- Top Half Linear Layout -->
    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="521dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Principal Amount Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/principalAmount"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/principal_amount" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/principalAmountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="@string/principal_amount_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>

        <!--  Annual Interest Rate Layout Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/annualInterestRate"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/annual_interest_rate" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/annualInterestRateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="@string/annual_interest_rate_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>

        <!-- Calculation Period Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/calculationPeriod"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/calculation_period" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/calculationPeriodEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="@string/calculation_period_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </LinearLayout>

        <!-- Radio Button Group Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/compoundInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/compound_interval" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:checkedButton="@+id/monthlyRadioButton">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/dailyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_daily_interval" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/monthlyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_monthly_interval" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/quarterlyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_quarterly_interval" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/biannuallyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_biannually_interval" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/annuallyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_annually_interval" />

            </RadioGroup>

        </LinearLayout>

        <!-- Calculation Period Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/monthlyContributionActivationSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/regular_monthly_deposit_switch"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </LinearLayout>

        <!-- Deposit Amount Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/depositAmount"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/deposit_amount" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/depositAmountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="@string/principal_amount_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonpink"
            android:text="@string/calculate_button"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>